--- a/index.html
+++ b/index.html
@@ -427,9 +427,7 @@
         <div class="form-field-list">
             <label for="list" class="form-label-list">Подпишитесь на рассылку</label>
             <input class="form-input-list" type="text" name="Email" id="list"placeholder="Email" />
-            <button class="button-list" type="button">Подписаться
-
-            </button>
+            <button class="button-list" type="button">Подписаться</button>
     </div>        
         
 
