--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </label>
 
                         </div>
-                        <button class="button-modal" type="button">Отправить</button>
+                        <button class="button-modal" type="submit">Отправить</button>
                     </form>
                 
                 <button class="close" data-modal-close>
@@ -427,9 +427,9 @@
         <div class="form-field-list">
             <label for="list" class="form-label-list">Подпишитесь на рассылку</label>
             <input class="form-input-list" type="text" name="Email" id="list"placeholder="Email" />
-            <button class="button-list" type="button">Подписаться</button>
-    </div>        
-        
+            <button class="button-list" type="submit">Подписаться</button>
+        </div>        
+        </div>
 
             </footer>  
         <script src="./js/modal.js"></script>
