--- a/portfolio.html
+++ b/portfolio.html
@@ -230,6 +230,11 @@
                         </li>
                     </ul>
             </div>
+        <div class="form-field-list">
+            <label for="list" class="form-label-list">Подпишитесь на рассылку</label>
+            <input class="form-input-list" type="text" name="Email" id="list" placeholder="Email" />
+            <button class="button-list" type="submit">Подписаться</button>
+        </div>
         </div>    
         </footer>
     
