--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             
                             <label class="form-label-checkbox">
                                 
-                               <input class="form-input-checkbox" type="checkbox" name="confid" checked> 
+                               <input class="form-input-checkbox" type="checkbox" name="confid"> 
                             <span class="icon-checkbox"></span>                                
                                 Соглашаюсь с рассылкой и принимаю <span class="terms"> Условия договора</span>
                             </label>
